fixed weirdness that happens on mobile, where the background on buttons isn't transparent

--- a/css/master.css
+++ b/css/master.css
@@ -32,6 +32,7 @@ body {
     color: inherit;
     text-align: inherit;
     width: 100%;
+    background-color: inherit;
 
     padding: 0.5rem;
 }
@@ -65,6 +66,7 @@ body {
     color: inherit;
     text-align: inherit;
     width: 100%;
+    background-color: inherit;
 
     padding: 0.5rem;
 }
